Removed command icons from body pane that did not fit (VSCode has max 9 icons total) Fixed settings panel and package.json

--- a/settings-panel/style.css
+++ b/settings-panel/style.css
@@ -523,6 +523,10 @@ ul {
   padding-right: 17%;
 }
 
+.float-container-no-padding {
+  padding-right: 5%;
+}
+
 .image__preview__body--float-container {
   left: 0;
   position: absolute;
